# assembler-simulator-fh-aachen

./: Cargo.toml  readme.md
examples/: basic.rs
src/: commands.rs  error.rs  lib.rs  nibble.rs
src/backend/: mod.rs  test.rs
src/frontend/: mod.rs  test.rs
src/frontend/lexer/: mod.rs  test.rs  token.rs
src/frontend/parser/: command_builder.rs  mod.rs  operant.rs
src/frontend/resolver/: mod.rs
